[Issue #1855] Improve issue square, issue modal
* Make backdrop cover the entire square

* Center issue text

* Add hover border

* Add gradient to modal background

--- a/src/sass/components/_modal-content.scss
+++ b/src/sass/components/_modal-content.scss
@@ -1,5 +1,8 @@
 .background-brand-blue {
   .modal-content {
-    background-color: $brand-blue;
+    background: $brand-blue;
+    background: -moz-linear-gradient(-45deg, $brand-blue 0%, #11758e 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, $brand-blue 0%, #11758e 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, $brand-blue 0%, #11758e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   }
 }
